# Library-Management

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1706d20edc33_create_all_table.py  1f7a2b5015ba_update_user_table.py  232a65756b4a_restoring_borrow_request.py  347c7e279bc5_modified_library_tables.py  89e405faf0f6_relationship_between_tables.py  94318a5e8890_updating_borrow_table.py
src/: api.py
src/admin/: admin.py  admin_auth.py
src/auth/: models.py  routes.py  schemas.py  services.py
src/core/: config.py  database.py  models.py  security.py
src/utils/: rbac.py
